fixed spring + jacoco + sonar integration