@@ -9,7 +9,7 @@
     <properties>
         <jackson.version>2.1.3</jackson.version>
         <java-version>1.6</java-version>
-        <spring.version>3.2.0.RELEASE</spring.version>
+        <spring.version>3.2.2.RELEASE</spring.version>
         <redis.version>1.0.2.RELEASE</redis.version>
         <slf4j.version>1.7.3</slf4j.version>
         <servlet.version>2.5</servlet.version>
@@ -171,7 +171,7 @@
                         </includes>
                         <argLine>-javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.reportPath}</argLine>
                         <testFailureIgnore>false</testFailureIgnore>
-                        <forkMode>never</forkMode>
+                        <forkMode>always</forkMode>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -187,7 +187,7 @@
                     </dependencies>
                     <configuration>
                         <argLine>
-                            -javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.itReportPath} -Xmx1024m -XX:MaxPermSize=256m
+                            -javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.itReportPath}
                         </argLine>
                         <includes>
                             <include>**/*.class</include>
